<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rinnxyii.himandarin.SettingsFragment">

    <Button
        android:id="@+id/buttonAboutUs"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/about_us" />

    <Button
        android:id="@+id/buttonFeedback"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGuildline"
        android:layout_alignLeft="@+id/buttonGuildline"
        android:layout_alignStart="@+id/buttonGuildline"
        android:text="@string/feedback" />

    <Button
        android:id="@+id/buttonGuildline"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAboutUs"
        android:layout_alignLeft="@+id/buttonAboutUs"
        android:layout_alignStart="@+id/buttonAboutUs"
        android:text="@string/guildline" />

</RelativeLayout>
